<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="title"
            type="String" />
        <variable
            name="content"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity">

        <TextView
            android:id="@+id/titleView"
            style="@style/textButtStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_"
            app:layout_constraintBottom_toTopOf="@+id/scrollView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="407dp"
            android:layout_height="380dp"
            android:layout_marginTop="40dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/commentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible">


            <TextView
                android:id="@+id/contentView"
                style="@style/textButtStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_" />


        </ScrollView>

        <EditText
            android:id="@+id/commentText"
            style="@style/textButtStyle"
            android:layout_width="355dp"
            android:layout_height="71dp"
            android:layout_marginBottom="48dp"
            android:ems="10"
            android:hint="@string/commentary2"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/commentButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            tools:ignore="Autofill"
            tools:visibility="visible" />

        <Button
            android:id="@+id/commentButton"
            style="@style/buttomStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="comment"
            android:text="@string/comment"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>